@@ -10,6 +10,7 @@ import com.se1933g01.steam_clone_backend.dto.User.UserUpdateDTO;
 import com.se1933g01.steam_clone_backend.entity.game.Game;
 import com.se1933g01.steam_clone_backend.dto.BannedUserDTO;
 import com.se1933g01.steam_clone_backend.entity.transaction.Transaction;
+import com.se1933g01.steam_clone_backend.entity.user.CustomUserDetail;
 import com.se1933g01.steam_clone_backend.entity.user.User;
 import com.se1933g01.steam_clone_backend.repository.UserRepo;
 import com.se1933g01.steam_clone_backend.mapper.EntityMapper;
@@ -19,10 +20,10 @@ import jakarta.transaction.Transactional;
 
 import com.se1933g01.steam_clone_backend.repository.TransactionRepo;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -32,24 +33,40 @@ import java.util.stream.Collectors;
 @Service
 public class UserService {
 
-    @Autowired
     private UserRepo userRepo;
-    @Autowired
     private TransactionRepo transactionRepo;
     private EntityMapper entityMapper;
+    private static final String USER_NOT_FOUND_MSG = "User not found";
+
+    public UserService(UserRepo userRepo, TransactionRepo transactionRepo, EntityMapper entityMapper) {
+        this.userRepo = userRepo;
+        this.transactionRepo = transactionRepo;
+        this.entityMapper = entityMapper;
+    }
 
     public User getUser(Long userId) {
         return userRepo.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new EntityNotFoundException(USER_NOT_FOUND_MSG));
+    }
+
+    // String constant for user not found message
+
+    // author: Ba Thanh
+    // Get userId from SecurityContextHolder
+    private Long getCurrentUserId() {
+        CustomUserDetail userDetails = (CustomUserDetail) SecurityContextHolder.getContext().getAuthentication()
+                .getPrincipal();
+        return userDetails.getUser().getUserId();
     }
 
     /**
      * Author: Ba Thanh
      * // Show all transactions of a user.
      */
-    public List<Transaction> showTransactions(Long userId) {
+    public List<Transaction> showTransactions() {
+        Long userId = getCurrentUserId();
         User user = userRepo.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new EntityNotFoundException(USER_NOT_FOUND_MSG));
         return transactionRepo.findByUser(user);
     }
 
@@ -64,10 +81,11 @@ public class UserService {
      * @param userId
      * @return LibraryDTO containing user's library
      */
-    public LibraryDTO showLibrary(Long userId) {
+    public LibraryDTO showLibrary() {
+        Long userId = getCurrentUserId();
         User user = userRepo.findByIdWithLibraryGames(userId);
         if (user == null)
-            throw new RuntimeException("User not found");
+            throw new EntityNotFoundException(USER_NOT_FOUND_MSG);
         LibraryDTO libraryDTO = new LibraryDTO();
         List<GameDetailDTO> gameDetailList = new ArrayList<>();
         for (Game game : user.getGames()) {
@@ -88,7 +106,7 @@ public class UserService {
                     .collect(Collectors.toSet()));
             gameInLibrary.setMedia(game.getMedia().stream()
                     .map(media -> new MediaDTO(media.getMediaId(), media.getUrl(), media.getType()))
-                    .collect(Collectors.toList()));
+                    .toList());
             gameInLibrary.setOs(game.getOs());
             gameInLibrary.setStorage(game.getStorage());
             gameInLibrary.setProcessor(game.getProcessor());
@@ -108,7 +126,8 @@ public class UserService {
      * check if game is in cart
      * return true if game is in cart, false otherwise.
      */
-    public boolean isGameInCart(Long userId, Long gameId) {
+    public boolean isGameInCart(Long gameId) {
+        Long userId = getCurrentUserId();
         User user = userRepo.findByIdWithCartGames(userId);
         if (user == null)
             return false;
@@ -120,7 +139,8 @@ public class UserService {
      * check if game is in library
      * return true if game is in library, false otherwise.
      */
-    public boolean isGameOwned(Long userId, Long gameId) {
+    public boolean isGameOwned(Long gameId) {
+        Long userId = getCurrentUserId();
         User user = userRepo.findByIdWithLibraryGames(userId);
         if (user == null)
             return false;
@@ -129,19 +149,21 @@ public class UserService {
 
     /* author: bathanh */
     // get user's balance
-    public double getUserBalance(Long userId) {
+    public double getUserBalance() {
+        Long userId = getCurrentUserId();
         User user = userRepo.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new EntityNotFoundException(USER_NOT_FOUND_MSG));
         return user.getWalletBalance();
     }
 
     /* author: bathanh */
     // add money to user's wallet
     @Transactional
-    public Double addUserBalance(Long userId, Double amount) {
+    public Double addUserBalance(Double amount) {
         if (amount == null || amount <= 0)
             throw new IllegalArgumentException("Amount must be positive");
-        User user = userRepo.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
+        Long userId = getCurrentUserId();
+        User user = userRepo.findById(userId).orElseThrow(() -> new EntityNotFoundException(USER_NOT_FOUND_MSG));
         user.setWalletBalance(user.getWalletBalance() + amount);
         userRepo.save(user);
         return user.getWalletBalance();
@@ -150,12 +172,13 @@ public class UserService {
     /* author: bathanh */
     // deduct user's wallet
     @Transactional
-    public Double subtractUserBalance(Long userId, Double amount) {
+    public Double subtractUserBalance(Double amount) {
         if (amount == null || amount <= 0)
             throw new IllegalArgumentException("Amount must be positive");
-        User user = userRepo.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
+        Long userId = getCurrentUserId();
+        User user = userRepo.findById(userId).orElseThrow(() -> new EntityNotFoundException(USER_NOT_FOUND_MSG));
         if (user.getWalletBalance() < amount) {
-            throw new RuntimeException("Insufficient balance");
+            throw new IllegalArgumentException("Insufficient balance");
         }
         user.setWalletBalance(user.getWalletBalance() - amount);
         userRepo.save(user);
@@ -172,7 +195,7 @@ public class UserService {
      */
     public User getUser(String username) {
         return userRepo.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new RuntimeException(USER_NOT_FOUND_MSG));
     }
 
     /**
@@ -237,6 +260,6 @@ public class UserService {
                 user.getProfileName(),
                 user.getSummary(),
                 user.isBanStatus()))
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new RuntimeException(USER_NOT_FOUND_MSG));
     }
 }
